--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,23 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: rgba(4, 70, 100, 0.6);
+  font-size: 30px;
+    font-size: 1.5vw;
 }
 
 a {
   color: #00B7FF;
+}
+
+h1 {
+  align: center;
+}
+
+span {
+  font-weight: 400;
+}
+
+.jumbotron{
+  text-align: center;
 }
